jdk11 的一些不推荐语法优化