@@ -288,14 +288,12 @@ abstract class VFS {
 		for (int i = 0; vfs == null || !vfs.isValid(); i++) {
 			Class<? extends VFS> impl = impls.get(i);
 			try {
-				vfs = impl.newInstance();
+				vfs = impl.getDeclaredConstructor().newInstance();
 				if (vfs == null || !vfs.isValid()) {
 					log.debug("VFS implementation " + impl.getName() + " is not valid in this environment.");
 				}
-			} catch (InstantiationException e) {
-				log.error("Failed to instantiate " + impl, e);
-				return null;
-			} catch (IllegalAccessException e) {
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+					| InvocationTargetException | NoSuchMethodException | SecurityException e) {
 				log.error("Failed to instantiate " + impl, e);
 				return null;
 			}
